@@ -62,15 +62,29 @@ browse the related part from the following list:
 All these diagrams are generating from the <a href="imgs/CCM.vsd">CCM.vsd
 Visio file</a> (The same file in Visio V.5 format is <a href="imgs/CCM-v5.vsd">here</a>.)
 
+<h2>CIAO part-by-part</h2>
+
+Here is a list of the major parts (I don't want to use the word "component" to confuse you :) of CIAO that a user should be aware of.
+
+<UL>
+  <li><a href="http://www.dre.vanderbilt.edu/Doxygen/Current/html/tao/ciao/tools/daemon/index.html"><strong>Daemon:</strong></a> A CIAO Daemon is the per-host Daemon process which is used to create/spawn the ComponentServer.</li>
+
+  <li><a href="http://www.dre.vanderbilt.edu/Doxygen/Current/html/tao/ciao/ciao/index.html"><strong>ComponentServer:</strong></a> A ComponentServer is the center part of CIAO. It's responsible for component/home creation.</li>
+
+  <li><a href="http://www.dre.vanderbilt.edu/Doxygen/Current/html/tao/ciao/tools/assembly_deployer/index.html"><strong>AssemblyDeployer:</strong></a> A AssemblyDeployer is responsible for starting the Assembly process.</li>
+
+  <li><a href="http://www.dre.vanderbilt.edu/Doxygen/Current/html/tao/ciao/tools/assembly_deployer/index.html"><strong>AssemblyManager:</strong></a> A AssemblyManager is the center part to do the Assembly work.</li>
+</UL>
+
 
 <h2>CIAO-tutorials</h2>
 
 We have two Hello tutorials to help the user to understand CCM/CIAO.
 
 <UL>
-  <li><code>$(CIAO_ROOT)/docs/tutorial/Hello.</code> This example shows the low level infomation about CIAO Component/Component Home creation and deletion.</li>
+  <li><a href="./tutorial/Hello"><code>$(CIAO_ROOT)/docs/tutorial/Hello.</code></a> This example shows the low level infomation about CIAO Component/Component Home creation and deletion.</li>
 
-  <li><code>$(CIAO_ROOT)/examples/Hello.</code> This example illustrates how to build a CIAO based application <a href="../examples/Hello/step-by-step.html">step-by-step</a>. There is also a detailed documentation explaining this example avalable in both <a href="http://www.dre.vanderbilt.edu/~lu/CCM/CCM_Hello_example.PDF"> PDF</a> and <a href="http://www.dre.vanderbilt.edu/~lu/CCM/CCM_Hello_example.ppt"> PowerPoint</a> format.</li>
+  <li><a href="../examples/Hello"><code>$(CIAO_ROOT)/examples/Hello.</code></a> This example illustrates how to build a CIAO based application <a href="../examples/Hello/step-by-step.html">step-by-step</a>. There is also a detailed documentation explaining this example avalable in both <a href="http://www.dre.vanderbilt.edu/~lu/CCM/CCM_Hello_example.PDF"> PDF</a> and <a href="http://www.dre.vanderbilt.edu/~lu/CCM/CCM_Hello_example.ppt"> PowerPoint</a> format.</li>
 
 </UL>
 
