@@ -1,3 +1,9 @@
+Thu Feb 19 11:07:35 2004  Tao Lu  <lu@dre.vanderbilt.edu>
+
+	* docs/index.html:
+
+	  Added the parts listing area. Added a few relative links.
+
 Wed Feb 18 13:05:35 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>
 
 	* CCF/CCF/IDL2/SemanticGraph/Name.cpp:
